# lnmaster-polito

./: LICENSE  README.md  cheatsheet.html  cheatsheet.md  exercises.html  exercises.md
lightning-polar-scripts/: .env  .env.example  .gitignore  README.md  cln_rest_demo.py  pyproject.toml  test_both_apis.py
lightning-polar-scripts/examples/: basic_usage.py  lnd_rest_demo.py
lightning-polar-scripts/lightning_polar_scripts/: __init__.py  cli.py  config.py  core_lightning.py  lnd.py
